# ChangeLog for media-libs/tiff
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/tiff/ChangeLog,v 1.131 2009/07/27 22:00:17 maekke Exp $

  27 Jul 2009; Markus Meier <maekke@gentoo.org> tiff-3.8.2-r8.ebuild:
  amd64 stable, bug #276988

  26 Jul 2009; Brent Baude <ranger@gentoo.org> tiff-3.8.2-r8.ebuild:
  Marking tiff-3.8.2-r8 ppc64 for bug 276988

  19 Jul 2009; nixnut <nixnut@gentoo.org> tiff-3.8.2-r8.ebuild:
  ppc stable #276988

  15 Jul 2009; Raúl Porcel <armin76@gentoo.org> tiff-3.8.2-r8.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #276988

  15 Jul 2009; Jeroen Roovers <jer@gentoo.org> tiff-3.8.2-r8.ebuild:
  Stable for HPPA (bug #276988).

*tiff-3.8.2-r8 (14 Jul 2009)

  14 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  +tiff-3.8.2-r8.ebuild, +files/tiff-3.8.2-CVE-2009-2347.patch:
  version bump for security bug 276988, and stable for x86

  09 Jul 2009; Christian Faulhammer <fauli@gentoo.org> tiff-3.8.2-r7.ebuild:
  only display pkg_postinst message when JBIG support is compiled, bug
  276870 by Toralf Förster <toralf DOT foerster AT gmx DOT de>

  08 Jul 2009; Markus Meier <maekke@gentoo.org> tiff-3.8.2-r7.ebuild:
  amd64 stable, bug #276339

  08 Jul 2009; Raúl Porcel <armin76@gentoo.org> tiff-3.8.2-r7.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #276339

  06 Jul 2009; Brent Baude <ranger@gentoo.org> tiff-3.8.2-r7.ebuild:
  Marking tiff-3.8.2-r7 ppc64 and ppc for bug 276339

  06 Jul 2009; Christian Faulhammer <fauli@gentoo.org> tiff-3.8.2-r7.ebuild:
  stable x86, security bug 276339

  06 Jul 2009; Jeroen Roovers <jer@gentoo.org> tiff-3.8.2-r7.ebuild:
  Stable for HPPA (bug #276339).

*tiff-3.8.2-r7 (04 Jul 2009)

  04 Jul 2009; Markus Meier <maekke@gentoo.org> +tiff-3.8.2-r7.ebuild,
  +files/tiff-3.8.2-CVE-2009-2285.patch:
  version bump wrt security bug #276339. this ebuild is based on
  tiff-3.8.2-r5.ebuild as opengl-support is currently broken in -r6.
