@@ -6,10 +6,12 @@ AUX tiff-3.8.2-tiffsplit.patch 646 RMD160 14633a8b89b71f6c9aa027c25233854331d863
 AUX tiff-jbig.patch 14636 RMD160 88f8069cda0e1a897961e2c69e6b787a7776124d SHA1 293c174bd1137c63a85dbfc761616752d2f3644f SHA256 73e70f6cf3e63abfd7b5569e2aae0a6811020c883065dfc36d563ca2e547ccd1
 DIST tiff-3.8.2-pdfsec-patches.tar.bz2 23447 RMD160 4660ab880b3e7c308687f662fcb8dea97e06881a SHA1 1a68c97a039acb2417ca5e0493323854753f12ce SHA256 ef965b26ba9384f4c009aa9762a87d6ddc48269a430a177c4bc36b01d9c1259d
 DIST tiff-3.8.2.tar.gz 1336295 RMD160 1b4d825e3be08764e953fc58246d0c25ab4dd17d SHA1 549e67b6a15b42bfcd72fe17cda7c9a198a393eb SHA256 be88f037080b93ce0a337b2b3ca5e8195f76885deb6c558cc3aa872ee848fc76
+DIST tiff-3.9.1.tar.gz 1410331 RMD160 3632021a7f5d082776529a1d4b0abc8ecd2869f3 SHA1 675ad1977023a89201b80cd5cd4abadea7ba0897 SHA256 3436d7331b1696c3ec776b0130a272f6593389d4f7d413bc80b11fb295d61e99
 EBUILD tiff-3.8.2-r4.ebuild 1725 RMD160 b22bee75465c3b2209673535286883245e304652 SHA1 10dd6f362f1b11446cfde668fc5d81a2835631af SHA256 d21ea8744bd69dfcd9a2a102def86930bd2e751d9a83155ecac846ccb8f6acd8
 EBUILD tiff-3.8.2-r5.ebuild 1747 RMD160 e56b1ab06c6a2e3999b68fb4792a7cbd84811167 SHA1 52c0a9b9db4cd2ab457cb4d91f7f43869e83ddc8 SHA256 4964051308df5e4ae098472d2aceb728b9e8ba4c217dbb39ec0bdcbf1f5c67e2
 EBUILD tiff-3.8.2-r6.ebuild 2694 RMD160 17f1496c8a310e25671e137e1f4df50280b88d49 SHA1 701ae726e600d72731bdcd3301a2f7c38c6706ec SHA256 7312930d11ccf2f44e28ced881e7501181a726ee682a5ea7ad981803ee6e4cfa
 EBUILD tiff-3.8.2-r7.ebuild 1775 RMD160 d08efc9ab2658477d539e3d949fd0ea052064e74 SHA1 4674d044d97de9857adf5e5dbc4bc3a8770b3f72 SHA256 4bb42cefb4bca051a9e92960c214a7a2696e754b43f337eae56a6b690a52c410
 EBUILD tiff-3.8.2-r8.ebuild 1823 RMD160 cee802369da9703b45095651d975ce8cbb3aa57e SHA1 08e416e3096b10be1d8154a1ccc4091c551975cc SHA256 5b5dce59069000a6b1c8ddf986978b11d690154a01d3301dc39ebf88fb7b37af
-MISC ChangeLog 18196 RMD160 4efefc311bfaee85cac86e2a64dd8ab55b095ad7 SHA1 e20a4b93fa265d77129536e07fe34902b2801f80 SHA256 1f9c2cf50e85605af7fe211b43ff6f4ae5994a290ce567bc942b4a1d71693167
+EBUILD tiff-3.9.1.ebuild 1493 RMD160 adc8c6f46d0505e3551549db4447b615f837959f SHA1 10f8bd3fb4fd42734c3e3aa4fc50a1f28c9bc027 SHA256 14a57fa949bbc32e52eb6c4f6ffc9d9c23450e7002c09551df6e4a24c1811df5
+MISC ChangeLog 18434 RMD160 96c66362284d9957353f0ab789f27c5c05a2e796 SHA1 a1fcfc3725b1b830787b1de9de3648e17ea98104 SHA256 b4a347a19f0b542e1903933b7371c6cb6fc361b0a71d7be739fcd00a8bf5dd8e
 MISC metadata.xml 447 RMD160 8df7883ab02a353acd993037450e7bbc984c052d SHA1 8ffef6a88ae70afbdea7f3be25e1e9a28b6698c5 SHA256 ee7391b2521ef9676ead67466ad7249f05f8d3c9bd8d8984bc0ceac8dcb804b3
