@@ -1,0 +1,52 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/tiff/tiff-3.9.1.ebuild,v 1.1 2009/09/19 04:10:34 nerdboy Exp $
+
+EAPI=2
+
+inherit eutils libtool
+
+DESCRIPTION="Library for manipulation of TIFF (Tag Image File Format) images"
+HOMEPAGE="http://www.remotesensing.org/libtiff/"
+SRC_URI="ftp://ftp.remotesensing.org/pub/libtiff/${P}.tar.gz"
+
+LICENSE="as-is"
+SLOT="0"
+KEYWORDS="~x64-freebsd ~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris"
+IUSE="jpeg jbig nocxx zlib"
+
+RDEPEND="jpeg? ( >=media-libs/jpeg-6b )
+	jbig? ( >=media-libs/jbigkit-1.6-r1 )
+	zlib? ( >=sys-libs/zlib-1.1.3-r2 )"
+DEPEND="${RDEPEND}"
+
+src_prepare() {
+	epatch "${FILESDIR}"/${PN}-3.8.2-CVE-2009-2285.patch
+	elibtoolize
+}
+
+src_configure() {
+	econf \
+		$(use_enable !nocxx cxx) \
+		$(use_enable zlib) \
+		$(use_enable jpeg) \
+		$(use_enable jbig) \
+		--with-pic --without-x \
+		--with-docdir="${EPREFIX}"/usr/share/doc/${PF}
+}
+
+src_install() {
+	emake install DESTDIR="${D}" || die "make install failed"
+	dodoc README TODO VERSION
+}
+
+pkg_postinst() {
+	if use jbig; then
+		echo
+		elog "JBIG support is intended for Hylafax fax compression, so we"
+		elog "really need more feedback in other areas (most testing has"
+		elog "been done with fax).  Be sure to recompile anything linked"
+		elog "against tiff if you rebuild it with jbig support."
+		echo
+	fi
+}
