@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/tiff
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/tiff/ChangeLog,v 1.131 2009/07/27 22:00:17 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/tiff/ChangeLog,v 1.132 2009/09/19 04:10:34 nerdboy Exp $
+
+*tiff-3.9.1 (19 Sep 2009)
+
+  19 Sep 2009; Steve Arnold <nerdboy@gentoo.org> +tiff-3.9.1.ebuild:
+  Updated to current upstream stable stable (required for gdal). Closes 
+  bug 285285.  Also fixes bug in gdal rendering (see bug #285310).
 
   27 Jul 2009; Markus Meier <maekke@gentoo.org> tiff-3.8.2-r8.ebuild:
   amd64 stable, bug #276988
